[FIX] Several bugs: - No panel when 0 results - Alignment with movie panel in Google - Display a message if there is an error in the socket connection establishment - Display the panel even if there is already OptiSearch

--- a/src/styles/chatgpt.css
+++ b/src/styles/chatgpt.css
@@ -1,7 +1,3 @@
-body:has(.optipanel.optichat:not(.bingchat)) .optisearchbox:has(> .optipanel.bingchat) {
-  display: none;
-}
-
 .optisearchbox .optichat .optiheader{
   margin-top: 10px;
   margin-bottom: 0px;
